--- a/templates/views/tradingzone/tech_analytics.hbs
+++ b/templates/views/tradingzone/tech_analytics.hbs
@@ -7,7 +7,7 @@
     <div class="wrapper" style="min-height: 90vh; margin-top: 50px;">
             
         <div class="row mb-3">
-            <div class="col-5">
+            <div class="col-6">
                 <h2>Technical Analytics</h2>
             </div>
             <div class="col-2">
@@ -16,13 +16,13 @@
                     <option>5m</option>
                     <option>15m</option>
                     <option>1h</option>
-                    <option>4h</option>
+                    <option selected>4h</option>
                     <option>1d</option>
                     <option>1w</option>
                     <option>1month</option>
                 </select>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <select class="form-control" id="selectSymbol">
                     <option>BTCBUSD</option>
                     <option>BTCUSDT</option>
