Create user workspace

--- a/templates/partials/menubar.hbs
+++ b/templates/partials/menubar.hbs
@@ -15,7 +15,7 @@
     
     {{#ifdef user }}
     <li class="nav-item mr-3">
-        <a class="nav-link" href="/cryptotrading">Trading Zone</a>
+        <a class="nav-link" href="/workspace">Workspace</a>
     </li>
     {{/ifdef}}
 
